<resources>
    <string name="app_name">mDoc</string>
    <string name="signup">Update your profile</string>
    <string name="hintTitle">Title (Mr/Mrs/Miss/Dr/Prof)</string>
    <string name="hintFName">First Name</string>
    <string name="hintLName">Last Name</string>
    <string name="hintNumber">Phone Number</string>
    <string name="code">+94</string>
    <string name="hintEmail">Email Address</string>
    <string name="hintMedNumber">Medical Registration Number</string>
    <string name="hintPassword">Enter Password</string>
    <string name="hintReenterpw">Re enter Password</string>
    <string name="btnSubmit">Submit</string>
    <string name="btnPatients">MY PATIENTS</string>
    <string name="btnPlace">MY PLACES OF PRACTICE</string>
    <string name="btnProfile">MY PROFILE</string>
    <string name="title_activity_my_patients">My Patients</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_my_places_of_practice">Places Of Practice</string>
    <string name="btnAddPlace">Add Place</string>
    <string name="txtPlace">Places Of Practice</string>
    <string name="hinthospital">Hospital</string>
    <string name="hintaddress">Address</string>
    <string name="hintphone">Contact number</string>
    <string name="consultationHours">Consultation Hours</string>
    <string name="hintdays">Day of the week</string>
    <string name="hinthours">Time</string>
    <string name="title_activity_add_places">AddPlaces</string>
    <string name="btnCH">Add Consultation Hours</string>
    <string name="btnAdd">Add Place</string>
    <string name="btnDelete">Delete</string>
    <string name="profile">My Profile</string>
    <string name="btnqualification">Qualifications and Specialization</string>
    <string name="btnupdateProfile">Edit My Profile</string>
    <string name="btnUpdate">Update</string>
    <string name="hintQualifications1">Type your qualifications here (1)</string>
    <string name="hintQualifications2">Type your qualifications here (2)</string>
    <string name="hintSpecialization1">Type your specialization here (1)</string>
    <string name="hintSpecialization2">Type your specialization here (2)</string>
    <string name="txtQual">Qualifications</string>
    <string name="txtSpe">Specializations</string>
    <string name="title_activity_list_of_doc">List of Doctors</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Admin</string>
    <string name="nav_header_subtitle">Admin123@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="admindashboard">ADMIN DASH BOARD</string>
    <string name="pending">Pending</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="add_specialization">ADD SPECIALIZATION</string>
    <string name="specialization_name">Specialization Name</string>
    <string name="description">Description</string>
    <string name="pending_doctors">Pending Doctors</string>
    <string name="no_registered_doctors">250</string>
    <string name="registered_doctors">Registered Doctors</string>
    <string name="registered_patient">Registered Patient</string>
    <string name="no_of_registered_patient">1500</string>
    <string name="new_specialization">New Specialization</string>
    <string name="appointment">Appointment</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mobile">mobile</string>
    <string name="problems">Problems</string>
    <string name="date">Date</string>
    <string name="submit">Submit</string>
    <string name="update">Update</string>
    <string name="list_of_doctors">List Of Doctors</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="my_profile">My Profile</string>
    <string name="lab_report">Lab Report</string>
    <string name="view_report">View Report</string>
    <string name="add_appointment">Add Appointment</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="delete_account">Delete Account</string>
    <string name="user_name">User Name</string>
    <string name="title_activity_main_home">MainHome</string>
    <string name="account">Account</string>
    <string name="log_out">Log Out</string>
    <string name="doctor_register">Doctor Register</string>
    <string name="customer_name">Customer Name</string>
    <string name="customeremail_23_com">CustomerEmail@23.com</string>
    <string name="make_appointment">Make Appointment</string>
    <string name="home">HOME</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="doctor_home">Doctor Home</string>

    <string name="view_places">VIEW PLACES</string>
    <string name="btnSave">SAVE</string>
    <string name="weekoftheday">Week of the day:</string>

    <string name="view_specialization">View Specialization</string>
    <string name="specialkey">SpecialKey</string>
    <string name="specialization_key">Specialization Key</string>
    <string name="department">Department</string>

    <string name="search">Search</string>
    <string name="search_specialization">Search Specialization</string>

    <string name="hint_national_identity_card">National Identity Card</string>
    <string name="Specialization">Specialization</string>
    <string name="search_by_date">search by date</string>

    <string name="search">SEARCH</string>
    <string name="ID">ID:</string>

    <!--<string name="search">SEARCH</string>-->




</resources>
