<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"

            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="Setting" />
        <item
            android:id="@+id/nav_pending"
            android:icon="@drawable/ic_pending"
            android:title="@string/pending" />
        <item
            android:id="@+id/nav_aboutus"
            android:icon="@drawable/aboutus"
            android:title="About Us" />


        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_logout"
            android:title="Log Out" />

    </group>

    <item android:title="Media">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
