<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPlaces"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textPlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtPlace"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="28sp"
        android:textColor="@color/textPrimary"
        android:background="@color/colorPrimaryLight"
        android:layout_marginTop="20dp"
        android:paddingTop="@dimen/paddingTop"
        android:paddingBottom="@dimen/paddingBottom"/>

    <EditText
        android:id="@+id/txthospital"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btnpaddingl"
        android:hint="@string/hinthospital"
        android:autofillHints=""
        android:paddingLeft="@dimen/paddingLeft"
        android:textSize="@dimen/txtsize"
        android:inputType=""
        android:paddingStart="@dimen/paddingLeft" />

    <EditText
        android:id="@+id/txtaddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btnpaddingl"
        android:hint="@string/hintaddress"
        android:autofillHints=""
        android:paddingLeft="@dimen/paddingLeft"
        android:textSize="@dimen/txtsize"
        android:inputType=""
        android:paddingStart="@dimen/paddingLeft" />

    <EditText
        android:id="@+id/txtcontactnumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btnpaddingl"
        android:hint="@string/hintphone"
        android:autofillHints=""
        android:paddingLeft="@dimen/paddingLeft"
        android:textSize="@dimen/txtsize"
        android:inputType=""
        android:paddingStart="@dimen/paddingLeft" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consultationHours"
        android:textSize="@dimen/txtsize"
        android:paddingTop="@dimen/paddingTop"
        android:textStyle="bold"
        android:paddingLeft="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weekoftheday"
        android:textSize="@dimen/txtsize"
        android:paddingTop="@dimen/paddingTop"
        android:paddingLeft="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!--<EditText-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_weight="1"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="@dimen/btnpaddingl"-->
            <!--android:hint="@string/hintdays"-->
            <!--android:autofillHints=""-->
            <!--android:paddingLeft="@dimen/paddingLeft"-->
            <!--android:textSize="@dimen/txtsize"-->
            <!--android:inputType=""-->
            <!--android:paddingStart="@dimen/paddingLeft" />-->
        <Spinner
            android:id="@+id/spinnerweek"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/hintdays"
            android:paddingStart="@dimen/paddingLeft"
            android:textSize="@dimen/txtsize">


        </Spinner>

        <EditText
            android:id="@+id/time1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btnpaddingl"
            android:hint="@string/hinthours"
            android:autofillHints=""
            android:paddingLeft="@dimen/paddingLeft"
            android:textSize="@dimen/txtsize"
            android:inputType=""
            android:paddingStart="@dimen/paddingLeft" />

    </LinearLayout>
    <!--<Button-->
        <!--android:onClick="AddHours"-->
        <!--android:layout_width="200dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="@dimen/paddingLeft"-->
        <!--android:layout_marginTop="@dimen/paddingTop"-->
        <!--android:drawableLeft="@drawable/ic_add_black_24dp"-->
        <!--android:text="@string/btnCH"-->
        <!--android:background="@drawable/rounded_btn"-->
        <!--/>-->

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnAdd"
        android:background="@drawable/rounded_btn_blue"
        android:textSize="@dimen/txtsize"
        android:layout_marginRight="@dimen/paddingTop"
        android:layout_marginLeft="@dimen/paddingTop"
        android:layout_marginTop="@dimen/btntop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/fab_margin">

        <Button
            android:id="@+id/viewpop"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/paddingTop"
            android:layout_marginRight="@dimen/paddingTop"
            android:background="@drawable/rounded_btn_blue"
            android:onClick="myPlaces"
            android:text="@string/view_places"
            android:textSize="@dimen/txtsize" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/paddingTop"
            android:layout_weight="1"
            android:background="@drawable/rounded_btn_blue"
            android:text="@string/btnDelete"
            android:textSize="@dimen/txtsize" />

    </LinearLayout>
</LinearLayout>