<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DoctorMainActivity">
    <!--heading-->

    <TextView
        android:background="@color/colorPrimaryLight"
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/textPrimary"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="20dp"/>
    <!--title-->
    <!--<EditText-->
    <!--android:id="@+id/editText"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:ems="10"-->
    <!--android:hint="@string/hintTitle"-->
    <!--android:paddingTop="@dimen/btnpaddingr"-->
    <!--android:paddingLeft="@dimen/paddingLeft"-->
    <!--android:autofillHints=""-->
    <!--android:inputType=""-->
    <!--android:paddingRight="@dimen/paddingLeft"-->
    <!--android:layout_marginTop="@dimen/text_margin"/>-->
    <!--name-->
    <EditText
        android:id="@+id/dtxtnic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hintTitle"
        android:inputType=""
        android:paddingLeft="@dimen/paddingLeft"
        android:paddingTop="@dimen/btnpaddingr"
        android:paddingRight="@dimen/paddingLeft" />

    <EditText
        android:id="@+id/dtxtfname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hintFName"
        android:inputType=""
        android:paddingTop="25dp"
        android:paddingLeft="@dimen/paddingLeft"
        android:paddingRight="@dimen/paddingRight"/>

    <EditText
        android:id="@+id/dtxtlastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hintLName"
        android:inputType=""
        android:paddingLeft="@dimen/paddingLeft"
        android:paddingTop="25dp"
        android:paddingRight="@dimen/paddingRight" />
    <!--email-->
    <EditText
        android:id="@+id/dtxtemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hintEmail"
        android:inputType=""
        android:paddingTop="25dp"
        android:paddingLeft="@dimen/paddingLeft"
        android:paddingRight="@dimen/paddingRight" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editText3"
            android:layout_width="67dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="none"
            android:text="@string/code"
            android:autofillHints=""
            android:paddingTop="25dp"
            android:paddingLeft="@dimen/btnpaddingl"/>

        <EditText
            android:id="@+id/dtxtphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:paddingTop="25dp"
            android:hint="@string/hintNumber"
            android:inputType="" />
    </LinearLayout>
    <!--med#-->
    <EditText
        android:id="@+id/dtxtmedreg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:paddingTop="25dp"
        android:hint="@string/hintMedNumber"
        android:inputType=""
        android:paddingLeft="@dimen/paddingLeft"
        android:paddingRight="@dimen/paddingRight" />
    <!--pw-->



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:onClick="submit"
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_btn"
            android:layout_marginLeft="@dimen/btnpaddingl"
            android:layout_marginRight="@dimen/btnpaddingr"
            android:layout_marginTop="@dimen/paddingLeft"
            android:text="@string/btnUpdate"
            android:textColor="@color/textPrimary"
            android:textSize="@dimen/txtsize"
            android:drawableLeft="@drawable/ic_edit_black_24dp"
            />
    </LinearLayout>



</LinearLayout>

