<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DocProfile"
    android:orientation="vertical">

    <TextView
        android:background="@color/colorPrimaryLight"
        android:id="@+id/Profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btnpaddingl"
        android:text="@string/profile"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/textPrimary"
        android:textSize="25dp"
        android:paddingTop="@dimen/paddingTop"
        android:paddingBottom="@dimen/paddingBottom"/>


    <!--button 1-->
    <LinearLayout
        android:padding="@dimen/paddingTop"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/btntop"
        android:layout_marginBottom="@dimen/btnbottom">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="5"
            android:src="@drawable/ac"
            android:contentDescription="@string/btnPlace"/>

        <Button
            android:onClick="update"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:text="@string/btnupdateProfile"
            android:textStyle="bold"
            android:background="@drawable/rounded_btn"
            android:textColor="@color/textIcon"/>

    </LinearLayout>


    <!--button -->

    <LinearLayout
        android:padding="@dimen/paddingTop"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/btntop"
        android:layout_marginBottom="@dimen/btnbottom">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="5"
            android:contentDescription="@string/btnPatients"
            android:src="@drawable/qualification" />

        <Button
            android:onClick="qualnSpec"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_btn"
            android:text="@string/btnqualification"
            android:textColor="@color/textIcon"
            android:textStyle="bold" />

    </LinearLayout>




</LinearLayout>